<resources>
    <string name="app_name">游淘</string>
    <string name="app_exit">程序异常退出</string>
    <string name="press_again_to_exit_program">再按一次退出程序</string>
    <string name="hint">提示</string>
    <string name="sure">确定</string>
    <string name="tab_home">首页</string>
    <string name="tab_shopping_cart">购物车</string>
    <string name="tab_mine">我的</string>
    <string name="guide_btn">立即体验</string>
    <string name="mine_payment">待付款</string>
    <string name="mine_shipped">待发货</string>
    <string name="mine_pickup">待取货</string>
    <string name="mine_all_order">全部订单</string>
    <string name="mine_wechat_client">微信客服</string>
    <string name="mine_mainland_client">大陆客服</string>
    <string name="mine_korea_client">韩国客服</string>
    <string name="mine_recommand_reward">推荐有奖</string>
    <string name="mine_my_reward">我的红包</string>
    <string name="mine_comment_problem">常见问题</string>
    <string name="mine_settings">设置</string>
    <string name="login_title">登录美淘</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_forgot_pwd">忘记密码 ?</string>
    <string name="login_register">注册</string>
    <string name="login_by_wechat">用微信登录</string>
    <string name="login_text_or">或</string>
    <string name="register_title">注册美淘</string>
    <string name="register_phone">手机号码</string>
    <string name="register_code">验证码</string>
    <string name="register_btn_text">注册</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_password">密码</string>
    <string name="register_smscode">验证码</string>
    <string name="register_get_smscode">获取验证码</string>
    <string name="register_invitation_code">邀请码（选填）</string>
    <string name="home_hotcategory">热销产品</string>
    <string name="home_search_hint">搜索产品或品牌</string>
    <string name="query_cancel">取消</string>
    <string name="category_decs">商品详情</string>
    <string name="category_decs_insertcar">加入购物车</string>
    <string name="category_decs_buynow">立即购买</string>
    <string name="category_decs_share">取      消</string>
    <string name="shopcart_title">购物车</string>
    <string name="shopcart_accounts">结算(0)</string>
    <string name="shopcart_confirm">确认</string>
    <string name="shopcart_bg">购物车空空如也,赶紧囤货吧!</string>
    <string name="delivery_info_title">编辑取货信息</string>
    <string name="delivery_info_name">收货人</string>
    <string name="delivery_info_phone">手机号码</string>
    <string name="delivery_info_date">回国日期</string>
    <string name="delivery_info_flt_no">航班号</string>
    <string name="delivery_info_delivery">自提点</string>
    <string name="delivery_info_confirm">确认</string>
    <string name="payment_title">支付方式:</string>
    <string name="payment_online">在线支付</string>
    <string name="payment_wxpay_01">微信支付</string>
    <string name="payment_wxpay_02">使用微信支付,安全便捷</string>
    <string name="order_submit_title">待付款</string>
    <string name="order_submit_item_pay">去付款</string>
    <string name="order_submit_item_cancel">取消订单</string>
    <string name="order_item_empty">你还没有订单哦!</string>
    <string name="order_submit_confirm_title">待发货</string>
    <string name="order_submit_shipping_title">待取货</string>
    <string name="order_submit_all_title">全部订单</string>
    <string name="order_submit_cancel_title">已取消</string>
    <string name="order_submit_done_title">已完成</string>
    <string name="dialog_cancel_title">确认取消订单?</string>
    <string name="dialog_cancel_message">取消之后将自动退款</string>
    <string name="dialog_cancel_pos">放弃</string>
    <string name="dialog_cancel_neg">确定</string>
    <string name="dialog_tel_message">400-801-1110</string>
    <string name="dialog_tel_message_2">400-800-1210</string>
    <string name="dialog_tel_pos">取消</string>
    <string name="dialog_tel_neg">呼叫</string>
    <string name="dialog_login_title">未登录</string>
    <string name="dialog_login_message">是否转跳到登录界面</string>
    <string name="dialog_login_pos">放弃</string>
    <string name="dialog_login_neg">确定</string>
    <string name="dialog_bind_title">登录成功</string>
    <string name="dialog_bind_message">是否绑定手机</string>
    <string name="dialog_bind_pos">放弃</string>
    <string name="dialog_bind_neg">确定</string>
    <string name="dialog_cancel_pay_title">取消支付</string>
    <string name="dialog_cancel_pay_message">是否取消支付</string>
    <string name="dialog_cancel_pay_pos">继续支付</string>
    <string name="dialog_cancel_pay_neg">确定</string>
    <string name="order_detail_item">订单详情</string>
    <string name="order_detail_cancel">取消订单</string>
    <string name="order_detail_pay">去付款</string>
    <string name="wxpay_callback_title">支付成功</string>
    <string name="wxpay_callback_order">订单详情</string>
    <string name="wxpay_callback_home">回到首页</string>
    <string name="wxpay_callback_message">订单支付成功</string>
    <string name="mobile_binding_title">绑定手机</string>
    <string name="mobile_binding_next">跳过</string>
    <string name="mobile_binding_hint_phone">输入手机号码</string>
    <string name="mobile_binding_hint_sms">验证码</string>
    <string name="mobile_binding_hint_getsms">获取验证码</string>
    <string name="mobile_binding_hint_pwd">密码</string>
    <string name="mobile_binding_confirm">确定绑定</string>
    <string name="setting_title">设置</string>
    <string name="setting_line1">推送消息设置</string>
    <string name="setting_line2">求好评</string>
    <string name="setting_line3">清除本地缓存</string>
    <string name="setting_line4">关于</string>
    <string name="setting_exit">退出登录</string>
    <string name="retrieve_title">找回密码</string>
    <string name="retrieve_phone">输入手机号码</string>
    <string name="retrieve_pwd">新密码</string>
    <string name="retrieve_repwd">确认新密码</string>
    <string name="retrieve_code">验证码</string>
    <string name="retrieve_code_tv">获取验证码</string>
    <string name="retrieve_confirm">完成</string>
    <string name="about_title">关于</string>
    <string name="about_message">我的海淘送机场</string>
    <string name="about_version">V1.0.0</string>
    <string name="about_about">Copyright@2016Youyoumob All rights reserved</string>
    <string name="bonus_title">我的红包</string>
    <string name="bonus_price">5</string>
    <string name="bonus_item1">有效期至2015-07-02</string>
    <string name="bonus_item2">适用于所有商品,不找零、不折现</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="image_content">Image</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_facebookmessenger_client_inavailable">目前您的FacebookMessenger版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_baidutieba">百度贴吧</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_share_to_baidutieba">分享到百度贴吧</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_confirm">确定</string>
    <string name="ssdk_oks_contacts">联系人</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
</resources>