<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <RelativeLayout
        android:background="@color/bg_title_gap"
        style="@style/RelativeLayout_Title_Normal">
        <ImageView
            android:id="@+id/about_pro_iv"
            style="@style/ImageView_Title_Pro"/>
        <TextView
            android:text="@string/about_title"
            style="@style/TextView_Title_Title"/>
    </RelativeLayout>
    <View
        android:background="@color/bg_line_dark_gray"
        style="@style/HorizonLineStyle"/>
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_170"
        android:background="@drawable/desktop_icon_2x"
        android:layout_width="@dimen/view_170"
        android:layout_height="@dimen/view_170" />
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_35"
        android:background="@drawable/text_icon_3x"
        android:layout_width="@dimen/view_140"
        android:layout_height="@dimen/view_60" />
    <TextView
        android:textColor="@color/font_about"
        android:layout_marginTop="@dimen/view_50"
        android:textSize="@dimen/font_54"
        android:text="@string/about_message"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/font_gray"
        android:layout_marginTop="@dimen/view_70"
        android:textSize="@dimen/font_32"
        android:text="@string/about_version"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/view_60"
        android:gravity="bottom"
        android:textColor="@color/font_hint_gray"
        android:layout_marginTop="@dimen/view_70"
        android:textSize="@dimen/font_24"
        android:text="@string/about_about"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
</LinearLayout>